// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`computeClimbingComparisonMetrics > attributes provenance truncation to source activities when that is the only long list 1`] = `
{
  "attempts": 2,
  "attempts_status": "complete",
  "entries": 1,
  "evidence": [
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": true,
      "route_name": "Blue Arete",
      "sent": true,
      "source_activity_count": 21,
      "source_activity_ids": [
        "source-0",
        "source-1",
        "source-10",
        "source-11",
        "source-12",
        "source-13",
        "source-14",
        "source-15",
        "source-16",
        "source-17",
        "source-18",
        "source-19",
        "source-2",
        "source-20",
        "source-3",
        "source-4",
        "source-5",
        "source-6",
        "source-7",
        "source-8",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "shared-entry",
      ],
      "source_evidence_truncated": true,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
  ],
  "evidence_count": 1,
  "evidence_truncated": false,
  "excluded_ambiguous_entries": 0,
  "observed_grades": [
    "v_scale:V6",
  ],
  "outcomes_status": "complete",
  "sends": 1,
  "source_entries": 21,
}
`;

exports[`computeClimbingComparisonMetrics > does not report provenance truncation at the exact twenty-source boundary 1`] = `
{
  "attempts": 2,
  "attempts_status": "complete",
  "entries": 1,
  "evidence": [
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": true,
      "route_name": "Blue Arete",
      "sent": true,
      "source_activity_count": 20,
      "source_activity_ids": [
        "source-0",
        "source-1",
        "source-10",
        "source-11",
        "source-12",
        "source-13",
        "source-14",
        "source-15",
        "source-16",
        "source-17",
        "source-18",
        "source-19",
        "source-2",
        "source-3",
        "source-4",
        "source-5",
        "source-6",
        "source-7",
        "source-8",
        "source-9",
      ],
      "source_entry_count": 20,
      "source_entry_ids": [
        "entry-0",
        "entry-1",
        "entry-10",
        "entry-11",
        "entry-12",
        "entry-13",
        "entry-14",
        "entry-15",
        "entry-16",
        "entry-17",
        "entry-18",
        "entry-19",
        "entry-2",
        "entry-3",
        "entry-4",
        "entry-5",
        "entry-6",
        "entry-7",
        "entry-8",
        "entry-9",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 20,
      "source_providers": [
        "provider-0",
        "provider-1",
        "provider-10",
        "provider-11",
        "provider-12",
        "provider-13",
        "provider-14",
        "provider-15",
        "provider-16",
        "provider-17",
        "provider-18",
        "provider-19",
        "provider-2",
        "provider-3",
        "provider-4",
        "provider-5",
        "provider-6",
        "provider-7",
        "provider-8",
        "provider-9",
      ],
      "status": "included",
    },
  ],
  "evidence_count": 1,
  "evidence_truncated": false,
  "excluded_ambiguous_entries": 0,
  "observed_grades": [
    "v_scale:V6",
  ],
  "outcomes_status": "complete",
  "sends": 1,
  "source_entries": 20,
}
`;

exports[`computeClimbingComparisonMetrics > excludes conflicting cross-provider observations and marks coverage partial 1`] = `
{
  "attempts": null,
  "attempts_status": "unavailable",
  "entries": 0,
  "evidence": [
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Blue Arete",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "00000000-0000-4000-8000-000000000011",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "00000000-0000-4000-8000-000000000041",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "excluded_ambiguous",
    },
    {
      "attempt_count": 3,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Blue Arete",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "00000000-0000-4000-8000-000000000012",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "00000000-0000-4000-8000-000000000042",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "strava",
      ],
      "status": "excluded_ambiguous",
    },
  ],
  "evidence_count": 2,
  "evidence_truncated": false,
  "excluded_ambiguous_entries": 2,
  "observed_grades": [],
  "outcomes_status": "unavailable",
  "sends": null,
  "source_entries": 2,
}
`;

exports[`computeClimbingComparisonMetrics > excludes repeated stable IDs from the same source instead of double counting 1`] = `
{
  "attempts": null,
  "attempts_status": "unavailable",
  "entries": 0,
  "evidence": [
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Blue Arete",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "00000000-0000-4000-8000-000000000011",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "00000000-0000-4000-8000-000000000041",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "excluded_ambiguous",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Blue Arete",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "00000000-0000-4000-8000-000000000011",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "00000000-0000-4000-8000-000000000042",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "excluded_ambiguous",
    },
  ],
  "evidence_count": 2,
  "evidence_truncated": false,
  "excluded_ambiguous_entries": 2,
  "observed_grades": [],
  "outcomes_status": "unavailable",
  "sends": null,
  "source_entries": 2,
}
`;

exports[`computeClimbingComparisonMetrics > marks complete observations partial when other matching climbs are ambiguous 1`] = `
{
  "attempts": 2,
  "attempts_status": "partial",
  "entries": 1,
  "evidence": [
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Independent Route",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "00000000-0000-4000-8000-000000000011",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "00000000-0000-4000-8000-000000000041",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Conflicted Route",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "00000000-0000-4000-8000-000000000011",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "00000000-0000-4000-8000-000000000042",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "excluded_ambiguous",
    },
    {
      "attempt_count": 3,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Conflicted Route",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "00000000-0000-4000-8000-000000000012",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "00000000-0000-4000-8000-000000000043",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "strava",
      ],
      "status": "excluded_ambiguous",
    },
  ],
  "evidence_count": 3,
  "evidence_truncated": false,
  "excluded_ambiguous_entries": 2,
  "observed_grades": [
    "v_scale:V6",
  ],
  "outcomes_status": "partial",
  "sends": 1,
  "source_entries": 3,
}
`;

exports[`computeClimbingComparisonMetrics > merges an exact climb observation imported through two activities 1`] = `
{
  "attempts": 2,
  "attempts_status": "complete",
  "entries": 1,
  "evidence": [
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": true,
      "route_name": "Blue Arete",
      "sent": true,
      "source_activity_count": 2,
      "source_activity_ids": [
        "00000000-0000-4000-8000-000000000011",
        "00000000-0000-4000-8000-000000000012",
      ],
      "source_entry_count": 2,
      "source_entry_ids": [
        "00000000-0000-4000-8000-000000000041",
        "00000000-0000-4000-8000-000000000042",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 2,
      "source_providers": [
        "kaya",
        "strava",
      ],
      "status": "included",
    },
  ],
  "evidence_count": 1,
  "evidence_truncated": false,
  "excluded_ambiguous_entries": 0,
  "observed_grades": [
    "v_scale:V6",
  ],
  "outcomes_status": "complete",
  "sends": 1,
  "source_entries": 2,
}
`;

exports[`computeClimbingComparisonMetrics > normalizes identities, preserves failed outcomes, and reports truncated provenance 1`] = `
{
  "attempts": 201,
  "attempts_status": "complete",
  "entries": 101,
  "evidence": [
    {
      "attempt_count": 1,
      "climb_type": "boulder",
      "grade": " V6 ",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": " THE GYM ",
      "merged_duplicate": true,
      "route_name": " Blue   Arete ",
      "sent": false,
      "source_activity_count": 21,
      "source_activity_ids": [
        "source-0",
        "source-1",
        "source-10",
        "source-11",
        "source-12",
        "source-13",
        "source-14",
        "source-15",
        "source-16",
        "source-17",
        "source-18",
        "source-19",
        "source-2",
        "source-20",
        "source-3",
        "source-4",
        "source-5",
        "source-6",
        "source-7",
        "source-8",
      ],
      "source_entry_count": 21,
      "source_entry_ids": [
        "entry-0",
        "entry-1",
        "entry-10",
        "entry-11",
        "entry-12",
        "entry-13",
        "entry-14",
        "entry-15",
        "entry-16",
        "entry-17",
        "entry-18",
        "entry-19",
        "entry-2",
        "entry-20",
        "entry-3",
        "entry-4",
        "entry-5",
        "entry-6",
        "entry-7",
        "entry-8",
      ],
      "source_evidence_truncated": true,
      "source_provider_count": 21,
      "source_providers": [
        "provider-0",
        "provider-1",
        "provider-10",
        "provider-11",
        "provider-12",
        "provider-13",
        "provider-14",
        "provider-15",
        "provider-16",
        "provider-17",
        "provider-18",
        "provider-19",
        "provider-2",
        "provider-20",
        "provider-3",
        "provider-4",
        "provider-5",
        "provider-6",
        "provider-7",
        "provider-8",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 0",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-0",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-0",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 1",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-1",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-1",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 2",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-2",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-2",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 3",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-3",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-3",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 4",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-4",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-4",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 5",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-5",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-5",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 6",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-6",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-6",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 7",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-7",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-7",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 8",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-8",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-8",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 9",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-9",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-9",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 10",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-10",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-10",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 11",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-11",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-11",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 12",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-12",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-12",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 13",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-13",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-13",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 14",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-14",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-14",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 15",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-15",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-15",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 16",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-16",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-16",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 17",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-17",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-17",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 18",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-18",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-18",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 19",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-19",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-19",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 20",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-20",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-20",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 21",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-21",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-21",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 22",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-22",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-22",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 23",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-23",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-23",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 24",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-24",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-24",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 25",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-25",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-25",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 26",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-26",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-26",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 27",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-27",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-27",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 28",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-28",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-28",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 29",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-29",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-29",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 30",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-30",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-30",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 31",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-31",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-31",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 32",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-32",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-32",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 33",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-33",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-33",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 34",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-34",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-34",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 35",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-35",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-35",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 36",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-36",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-36",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 37",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-37",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-37",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 38",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-38",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-38",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 39",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-39",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-39",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 40",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-40",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-40",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 41",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-41",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-41",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 42",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-42",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-42",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 43",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-43",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-43",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 44",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-44",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-44",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 45",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-45",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-45",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 46",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-46",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-46",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 47",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-47",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-47",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 48",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-48",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-48",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 49",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-49",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-49",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 50",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-50",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-50",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 51",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-51",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-51",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 52",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-52",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-52",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 53",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-53",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-53",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 54",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-54",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-54",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 55",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-55",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-55",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 56",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-56",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-56",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 57",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-57",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-57",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 58",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-58",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-58",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 59",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-59",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-59",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 60",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-60",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-60",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 61",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-61",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-61",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 62",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-62",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-62",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 63",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-63",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-63",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 64",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-64",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-64",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 65",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-65",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-65",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 66",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-66",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-66",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 67",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-67",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-67",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 68",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-68",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-68",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 69",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-69",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-69",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 70",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-70",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-70",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 71",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-71",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-71",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 72",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-72",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-72",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 73",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-73",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-73",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 74",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-74",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-74",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 75",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-75",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-75",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 76",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-76",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-76",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 77",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-77",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-77",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 78",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-78",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-78",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 79",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-79",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-79",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 80",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-80",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-80",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 81",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-81",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-81",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 82",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-82",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-82",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 83",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-83",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-83",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 84",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-84",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-84",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 85",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-85",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-85",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 86",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-86",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-86",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 87",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-87",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-87",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 88",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-88",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-88",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 89",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-89",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-89",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 90",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-90",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-90",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 91",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-91",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-91",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 92",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-92",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-92",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 93",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-93",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-93",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 94",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-94",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-94",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 95",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-95",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-95",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 96",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-96",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-96",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 97",
      "sent": false,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-97",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-97",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
    {
      "attempt_count": 2,
      "climb_type": "boulder",
      "grade": "V6",
      "grade_system": "v_scale",
      "lead": null,
      "location_name": "The Gym",
      "merged_duplicate": false,
      "route_name": "Route 98",
      "sent": true,
      "source_activity_count": 1,
      "source_activity_ids": [
        "distinct-source-98",
      ],
      "source_entry_count": 1,
      "source_entry_ids": [
        "distinct-entry-98",
      ],
      "source_evidence_truncated": false,
      "source_provider_count": 1,
      "source_providers": [
        "kaya",
      ],
      "status": "included",
    },
  ],
  "evidence_count": 101,
  "evidence_truncated": true,
  "excluded_ambiguous_entries": 0,
  "observed_grades": [
    "v_scale: V6 ",
    "v_scale:V6",
  ],
  "outcomes_status": "complete",
  "sends": 50,
  "source_entries": 121,
}
`;

exports[`computeStrengthComparisonMetrics > excludes ambiguous cross-provider exercise occurrences 1`] = `
{
  "best_estimated_one_rep_max_kg": null,
  "estimated_one_rep_max_status": "unavailable",
  "excluded_sets": 4,
  "missing_volume_sets": 0,
  "sets": 4,
  "source_sets": 4,
  "suspicious_sets": 4,
  "valid_volume_kg_reps": null,
  "valid_volume_sets": 0,
  "volume_status": "unavailable",
  "working_sets": 4,
}
`;

exports[`computeStrengthComparisonMetrics > excludes conflicting cross-provider versions of the same logical set 1`] = `
{
  "best_estimated_one_rep_max_kg": null,
  "estimated_one_rep_max_status": "unavailable",
  "excluded_sets": 2,
  "missing_volume_sets": 0,
  "sets": 2,
  "source_sets": 2,
  "suspicious_sets": 2,
  "valid_volume_kg_reps": null,
  "valid_volume_sets": 0,
  "volume_status": "unavailable",
  "working_sets": 2,
}
`;

exports[`computeStrengthComparisonMetrics > excludes conflicting rows that reuse one source set identity 1`] = `
{
  "best_estimated_one_rep_max_kg": null,
  "estimated_one_rep_max_status": "unavailable",
  "excluded_sets": 2,
  "missing_volume_sets": 0,
  "sets": 2,
  "source_sets": 2,
  "suspicious_sets": 2,
  "valid_volume_kg_reps": null,
  "valid_volume_sets": 0,
  "volume_status": "unavailable",
  "working_sets": 2,
}
`;

exports[`computeStrengthComparisonMetrics > flags every invalid strength boundary without contaminating valid volume 1`] = `
{
  "best_estimated_one_rep_max_kg": 112,
  "estimated_one_rep_max_status": "partial",
  "excluded_sets": 3,
  "missing_volume_sets": 0,
  "sets": 6,
  "source_sets": 6,
  "suspicious_sets": 3,
  "valid_volume_kg_reps": 1870,
  "valid_volume_sets": 2,
  "volume_status": "partial",
  "working_sets": 4,
}
`;

exports[`computeStrengthComparisonMetrics > labels a subtotal partial when a working set is missing load or reps 1`] = `
{
  "best_estimated_one_rep_max_kg": 116.67,
  "estimated_one_rep_max_status": "partial",
  "excluded_sets": 1,
  "missing_volume_sets": 1,
  "sets": 2,
  "source_sets": 2,
  "suspicious_sets": 0,
  "valid_volume_kg_reps": 500,
  "valid_volume_sets": 1,
  "volume_status": "partial",
  "working_sets": 2,
}
`;

exports[`computeStrengthComparisonMetrics > merges exact duplicates from distinct source activities 1`] = `
{
  "best_estimated_one_rep_max_kg": 116.67,
  "estimated_one_rep_max_status": "complete",
  "excluded_sets": 0,
  "missing_volume_sets": 0,
  "sets": 1,
  "source_sets": 2,
  "suspicious_sets": 0,
  "valid_volume_kg_reps": 500,
  "valid_volume_sets": 1,
  "volume_status": "complete",
  "working_sets": 1,
}
`;

exports[`computeStrengthComparisonMetrics > preserves repeated sets recorded by one source 1`] = `
{
  "best_estimated_one_rep_max_kg": 116.67,
  "estimated_one_rep_max_status": "complete",
  "excluded_sets": 0,
  "missing_volume_sets": 0,
  "sets": 2,
  "source_sets": 2,
  "suspicious_sets": 0,
  "valid_volume_kg_reps": 1000,
  "valid_volume_sets": 2,
  "volume_status": "complete",
  "working_sets": 2,
}
`;
